fix: remove column gap and leave it to be customizable by user (#270)
- add a CSS/SASS variable instead to make it customizable

--- a/packages/multiple-select-vanilla/src/styles/_variables.scss
+++ b/packages/multiple-select-vanilla/src/styles/_variables.scss
@@ -68,6 +68,7 @@ $ms-drop-scrollbar-color: #c1c1c1 #f1f1f1 !default;
 $ms-drop-zindex: 1050 !default;
 $ms-input-focus-outline: none !default;
 $ms-infinite-empty-option-height: 20px !default;
+$ms-label-column-gap: 0 !default;
 $ms-label-margin-bottom: 0 !default;
 $ms-label-min-height: 1.25rem !default;
 $ms-label-padding: 0 0 0 2px !default;
